# 20251101_TVDI_Python_Crawel

./: README.md  lesson1.md  main.py  output.md  pyproject.toml
Lesson 2/: Python2.ipynb  Python2_1.ipynb  Python2_2.ipynb
Lesson 3/: Pythan3_3.ipynb  Pythan3_5.py  Pythan3_6.ipynb  Python3_1.ipynb  Python3_2.ipynb
Lesson 4/: form_demo.html  lesson4_1.ipynb
Lesson 6/: Lesson6_1.ipynb  Lesson6_2.ipynb
Lesson 7/: Lesson7_1.py  Lesson7_3.py  Lesson7_5.py  agents.md
lesson 5/: Lesson5_1.py  Lesson5_2_station.py  waiting_demo.html
