[project]
name = "20251101-tvdi-python-crawel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=4.0.0",
    "crawl4ai>=0.7.8",
    "ipykernel>=7.1.0",
    "nest>=0.4.4",
    "pandas>=2.3.3",
    "playwright>=1.56.0",
    "streamlit>=1.52.1",
]
